# mayhem-external-module

./: .gitignore  README.md  pinout.xcf
board/: TPS63020.bak  TPS63020.kicad_sym  development_board.kicad_pcb  development_board.kicad_prl  development_board.kicad_pro  development_board.kicad_sch  development_board.xml  fp-info-cache  fp-lib-table  sym-lib-table
board/Portapack_Mayhem.pretty/: External Module.kicad_mod
board/TPS63020.pretty/: DSJ14_2P85X1P58.kicad_mod
board/arduino-library.pretty/: Arduino_Nano_ESP32_Tile.kicad_mod
src/portapack-external-module/: CMakeLists.txt  README.md  register.txt  sdkconfig  sdkconfig.old
src/portapack-external-module/main/: CMakeLists.txt  Kconfig.projbuild  i2c_example_main.c  i2c_slave_driver.c  i2c_slave_driver.h  main.cpp
src/uart/: CMakeLists.txt  Readme.md  main.cpp  standalone_application.hpp  standalone_application_entry.cpp  uart.cpp  uart.hpp
src/uart/config/: Dockerfile  arm-none-eabi-toolchain.cmake  create_header.py
src/uart/ui/: ui_font_fixed_5x8.cpp  ui_font_fixed_8x16.cpp  ui_painter.cpp  ui_widget.cpp  ui_widget.hpp
